# algo3-tp2

./: .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt  DataGenerator.cpp  EJEMPLO DP TP1  benchmarkWrappers.cpp  benchmarkWrappers.h  grafGen.cpp  grafGen.h  polyfitPlot.py  printGeneratedGraph.cpp
informe/: apendice.tex  cambios.tex  delivery.tex  informe.tex  informe.toc  reconfiguracion.tex  subsidio.tex
informe/data/: Algo3-TP2.ipynb  delivery.csv  reconfiguration.csv  subsidy-complete.csv  subsidy.csv
informe/data/.ipynb_checkpoints/: Algo3-TP2-checkpoint.ipynb
src/: Utils.cpp  Utils.h  delivery.cpp  delivery.h  disjointSet.cpp  disjointSet.h  graph.cpp  graph.h  problema1.cpp  problema2.cpp  problema3.cpp  reconfiguration.cpp  reconfiguration.h  shortest.cpp  shortest.h  spanning.cpp  spanning.h  subsidy.cpp  subsidy.h
test/: AbstractGraphTest.h  CMakeLists.txt  DeliveryTest.cpp  DisjointSetTest.cpp  KruskalTest.cpp  ReconfigurationTest.cpp  ShortestPathTest.cpp  SubsidyTest.cpp
